--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/public/images/bbo_logo.png">
     <title>BBO</title>
+
+    <style>
+html{
+    background-color: #1d2a35;
+}
+nav{
+    background-color: #282A35;
+    height: 60px;
+    display: block;
+    padding: 6px;
+    border-radius: 10px;
+    border: 1px #282A35;
+}
+    </style>
+
 </head>
 <body>
-    <p>Hello World</p>
+    <nav class="nav">
+<img src="/public/images/bbo_logo.png" style="float:left">
+<div style="margin:auto">Brawlhalla Bangladesh Official</div>
+    </nav>
 </body>
 </html>
