--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,26 +9,29 @@
 
     <style>
         @font-face {
-  font-family: ptsans;
-  src: url('https://fonts.google.com/specimen/PT+Sans');
+  font-family: carico;
+  src: url('https://fonts.google.com/specimen/Cairo');
 }
 html{
-    background-color: #1d2a35;
+    background-color: #001f42;
 }
 nav{
-    background-color: #282A35;
+    margin:auto;
+    background-color: #02001f;
     height: 60px;
     display: block;
     padding: 6px;
-    border: 1px solid #282A35;
+    border: 1px solid #02001f;
     border-radius: 30px;
     position: fixed;
+    width: 96%;
 }
 img{
     width: 50px;
+    padding: 10px;
 }
 div{
-    font-family: ptsans;
+    font-family: carico;
     text-align: center;
     padding: 10px;
     font-size: 35px;
