--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,10 +8,7 @@
     <title>BBO</title>
 
     <style>
-        @font-face {
-  font-family: carico;
-  src: url('https://fonts.google.com/specimen/Cairo');
-}
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@600&display=swap');
 html{
     background-color: #001f42;
 }
@@ -31,7 +28,7 @@ img{
     padding: 10px;
 }
 div{
-    font-family: carico;
+    font-family: Carico, Roboto;
     text-align: center;
     padding: 10px;
     font-size: 35px;
