--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <style>
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@600&display=swap');
 html{
-    background-color: #001f42;
+    background-color: #111111;
 }
 nav{
     margin:auto;
@@ -25,7 +25,7 @@ nav{
 }
 img{
     width: 50px;
-    padding: 10px;
+    padding: 12px;
 }
 div{
     font-family: Carico, Roboto;
@@ -41,7 +41,7 @@ div{
 <body>
     <nav class="nav">
 <img src="/public/images/bbo_logo.png" style="float:left">
-<div>Brawlhalla Bangladesh Official</div>
+<div>BBO</div>
     </nav>
 </body>
 </html>
